--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "he": "1.1.1",
     "htmlparser": "1.7.7",
-    "mastodon-api": "1.3.0",
-    "underscore.string": "3.3.4"
+    "mastodon-api": "1.3.0"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
