--- a/mastobot-adminsupport.service
+++ b/mastobot-adminsupport.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=<specify user here>
-ExecStart=/usr/bin/node <path to your compiled mancerbot>
+ExecStart=/usr/bin/node <path to the index.js of the admin support bot, e.g., /<some path>/mastobot-adminsupport/compiled/index.js>
 TimeoutSec=15
 Restart=always
 
