--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "mastobot-adminsupport",
   "version": "0.0.1",
-  "description": "",
-  "main": "src/index.js",
+  "description": "Simple support bot for Mastodon",
+  "main": "compiled/index.js",
   "scripts": {
-    "compile": "./node_modules/babel-cli/bin/babel.js src --plugins transform-runtime --out-dir compiled"
+    "compile": "node ./node_modules/babel-cli/bin/babel.js src --out-dir compiled",
+    "token": "node ./node_modules/mastodon-api-token/index-compiled.js"
   },
   "author": "Kuro",
   "license": "",
   "dependencies": {
+    "babel-runtime": "6.26.0",
     "he": "1.1.1",
     "htmlparser": "1.7.7",
-    "mastodon-api": "1.3.0"
+    "mastodon-api": "1.3.0",
+    "merge-options": "1.0.0",
+    "mastodon-api-token": "git+https://github.com/kurokonomiyaki/mastodon-api-token.git"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
